--- a/portfolio.html
+++ b/portfolio.html
@@ -19,17 +19,17 @@
             </a>
             <ul class="nav-list list">
                 <li class="nav-item">
-                    <a class="nav-link" href="./index.html">
+                    <a class="nav-link weight color" href="./index.html">
                         Студия
                     </a>
                 </li>
                 <li class="nav-item"-nav>
-                    <a class="nav-link current" href="./portfolio.html">
+                    <a class="nav-link weight color current" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link weight color" href="#">
                         Контакты
                     </a>
                 </li>
@@ -37,12 +37,12 @@
         </nav>
         <ul class="header-contacts list">
             <li class="header-contacts-item">
-                <a class="header-contacts-link contact" href="mailto:info@devstudio.com">
+                <a class="header-contacts-link contact weight" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
             <li class="header-contacts-item">
-                <a class="header-contacts-link contact" href="tel:+380961111111">
+                <a class="header-contacts-link contact weight" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
@@ -50,31 +50,31 @@
     </header>
     <main>
         <section class="catalog">
-            <h1 hidden class="catalog-title section-title" lang="en">
+            <h1 hidden class="catalog-title section-title color" lang="en">
                 Catalog
             </h1>
             <ul class="filter-list list">
                 <li class="filter-item">
-                    <button type="button" class="filter-btn btn-current">
+                    <button type="button" class="filter-btn weight btn-current color">
                         Все
                     </button>
                 </li>
                 <li class="filter-item">
-                    <button type="button" class="filter-btn">
+                    <button type="button" class="filter-btn weight color">
                         Веб-сайты
                     </button>
                 <li class="filter-item">
-                    <button type="button" class="filter-btn">
+                    <button type="button" class="filter-btn weight color">
                         Приложения
                     </button>
                 </li>
                 <li class="filter-item">
-                    <button type="button" class="filter-btn">
+                    <button type="button" class="filter-btn weight color">
                         Дизайн
                     </button>
                 </li>
                 <li class="filter-item">
-                    <button type="button" class="filter-btn">
+                    <button type="button" class="filter-btn weight color">
                         Маркетинг
                     </button>
                 </li>
@@ -83,63 +83,63 @@
                 <li class="portfolio-item">
                     <a class="portfolio-link" href="">
                         <img class="portfolio-img" src="./images/portfolio/catalog_img1.jpg" alt="страница_веб-сайта" width="370">
-                        <h2 class="portfolio-title">Технокряк</h2>
+                        <h2 class="portfolio-subtitle color">Технокряк</h2>
                         <p class="portfolio-info">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-link" href="">
                         <img class="portfolio-img" src="./images/portfolio/catalog_img2.jpg" alt="баскетбол" width="370">
-                        <h2 class="portfolio-subtitle">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                        <h2 class="portfolio-subtitle color">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                         <p class="portfolio-info">Дизайн</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-link" href="">
                         <img class="portfolio-img" src="./images/portfolio/catalog_img3.jpg" alt="лого-рыба" width="370">
-                        <h2 class="portfolio-subtitle">Ресторан <span lang="en">Seafood</span></h2>
+                        <h2 class="portfolio-subtitle color">Ресторан <span lang="en">Seafood</span></h2>
                         <p class="portfolio-info">Приложение</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-link" href="">
                         <img class="portfolio-img" src="./images/portfolio/catalog_img4.jpg" alt="наушники" width="370">
-                        <h2 class="portfolio-subtitle">Проект <span lang="en">Prime</span></h2>
+                        <h2 class="portfolio-subtitle color">Проект <span lang="en">Prime</span></h2>
                         <p class="portfolio-inform">Маркетинг</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-link" href="">
                         <img class="portfolio-img" src="./images/portfolio/catalog_img5.jpg" alt="коробки" width="370">
-                        <h2 class="portfolio-subtitle">Проект<span lang="en">Boxes</span></h2>
+                        <h2 class="portfolio-subtitle color">Проект<span lang="en">Boxes</span></h2>
                         <p class="portfolio-info">Приложение</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-link" href="">
                         <img class="portfolio-img" src="./images/portfolio/catalog_img6.jpg" alt="страница_веб-сайта" width="370">
-                        <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
+                        <h2 class="portfolio-subtitle color" lang="en">Inspiration has no Borders</h2>
                         <p class="portfolio-info">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-link" href="">
                         <img class="portfolio-img" src="./images/portfolio/catalog_img7.jpg" alt="журнал" width="370">
-                        <h2 class="portfolio-subtitle">Издание<span lang="en">Limited Edition</span></h2>
+                        <h2 class="portfolio-subtitle color">Издание<span lang="en">Limited Edition</span></h2>
                         <p class="portfolio-inform">Дизайн</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-link" href="">
                         <img class="portfolio-img" src="./images/portfolio/catalog_img8.jpg" alt="етикетка" width="370">
-                        <h2 class="portfolio-subtitle">Проект<span lang="en">LAB</span></h2>
+                        <h2 class="portfolio-subtitle color">Проект<span lang="en">LAB</span></h2>
                         <p class="portfolio-info">Маркетинг</p>
                     </a>
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-link" href="">
                         <img class="portfolio-img" src="./images/portfolio/catalog_img9.jpg" alt="работа_с_ПК" width="370">
-                        <h2 class="portfolio-subtitle" lang="en">Growing Business</h2>
+                        <h2 class="portfolio-subtitle color" lang="en">Growing Business</h2>
                         <p class="portfolio-info">Приложение</p>
                     </a>
                 </li>
