--- a/portfolio.html
+++ b/portfolio.html
@@ -19,17 +19,17 @@
             </a>
             <ul class="nav-list list">
                 <li class="nav-item">
-                    <a class="nav-link weight color" href="./index.html">
+                    <a class="nav-link color" href="./index.html">
                         Студия
                     </a>
                 </li>
                 <li class="nav-item"-nav>
-                    <a class="nav-link weight color current" href="./portfolio.html">
+                    <a class="nav-link color current" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link weight color" href="#">
+                    <a class="nav-link color" href="#">
                         Контакты
                     </a>
                 </li>
@@ -37,12 +37,12 @@
         </nav>
         <ul class="header-contacts list">
             <li class="header-contacts-item">
-                <a class="header-contacts-link contact weight" href="mailto:info@devstudio.com">
+                <a class="header-contacts-link contact" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
             <li class="header-contacts-item">
-                <a class="header-contacts-link contact weight" href="tel:+380961111111">
+                <a class="header-contacts-link contact" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
@@ -50,31 +50,31 @@
     </header>
     <main>
         <section class="catalog">
-            <h1 hidden class="catalog-title section-title color" lang="en">
+            <h1 hidden class="catalog-title section-title" lang="en">
                 Catalog
             </h1>
             <ul class="filter-list list">
                 <li class="filter-item">
-                    <button type="button" class="filter-btn weight btn-current color">
+                    <button type="button" class="filter-btn btn btn-current color">
                         Все
                     </button>
                 </li>
                 <li class="filter-item">
-                    <button type="button" class="filter-btn weight color">
+                    <button type="button" class="filter-btn btn color">
                         Веб-сайты
                     </button>
                 <li class="filter-item">
-                    <button type="button" class="filter-btn weight color">
+                    <button type="button" class="filter-btn btn color">
                         Приложения
                     </button>
                 </li>
                 <li class="filter-item">
-                    <button type="button" class="filter-btn weight color">
+                    <button type="button" class="filter-btn btn color">
                         Дизайн
                     </button>
                 </li>
                 <li class="filter-item">
-                    <button type="button" class="filter-btn weight color">
+                    <button type="button" class="filter-btn btn color">
                         Маркетинг
                     </button>
                 </li>
