--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
             </a>
             <ul class="nav-list list">
                 <li class="nav-item">
-                    <a class="nav-link weight color current" href="./index.html">
+                    <a class="nav-link color current" href="./index.html">
                         Студия
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link weight color" href="./portfolio.html">
+                    <a class="nav-link color" href="./portfolio.html">
                         Портфолио
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link weight color" href="#">
+                    <a class="nav-link color" href="#">
                         Контакты
                     </a>
                 </li>
@@ -37,12 +37,12 @@
         </nav>
         <ul class="header-contacts list">
             <li class="header-contacts-item">
-                <a class="header-contacts-link contact weight" href="mailto:info@devstudio.com">
+                <a class="header-contacts-link contact" href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
             <li class="header-contacts-item">
-                <a class="header-contacts-link contact weight" href="tel:+380961111111">
+                <a class="header-contacts-link contact" href="tel:+380961111111">
                     +38 096 111 11 11
                 </a>
             </li>
@@ -58,7 +58,7 @@
             </button>
         </section>
         <section class="benefits">
-            <h2 hidden class="benefits-title section-title color" lang="en">
+            <h2 hidden class="benefits-title section-title"  lang="en">
                 Feature
             </h2>
             <ul class="benefits-list list">
@@ -113,13 +113,13 @@
             </ul>
         </section>
         <section class="our-team">
-            <h2 class="team-title section-title color">
+            <h2 class="team-title section-title">
                 Наша команда
             </h2>
             <ul class="team-list list">
                 <li class="team-item">
                     <img src="./images/team_card_1.jpg" alt="Игорь" width="270">
-                    <h3 class="team-name weight color">
+                    <h3 class="team-name color">
                         Игорь Демьяненко
                     </h3>
                     <p class="team-positions" lang="en">
@@ -128,7 +128,7 @@
                 </li>
                 <li class="team-item">
                     <img src="./images/team_card_2.jpg" alt="Ольга" width="270">
-                    <h3 class="team-name weight color">
+                    <h3 class="team-name color">
                         Ольга Репина
                     </h3>
                     <p class="team-positions" lang="en">
@@ -137,7 +137,7 @@
                 </li>
                 <li class="team-item">
                     <img src="./images/team_card_3.jpg" alt="Николай" width="270">
-                    <h3 class="team-name weight color">
+                    <h3 class="team-name color">
                         Николай Тарасов
                     </h3>
                     <p class="team-positions" lang="en">
@@ -146,7 +146,7 @@
                 </li>
                 <li class="team-item">
                     <img src="./images/team_card_4.jpg" alt="Михаил" width="270">
-                    <h3 class="team-name weight color">
+                    <h3 class="team-name color">
                         Михаил Ермаков
                     </h3>
                     <p class="team-positions" lang="en">
